--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,19 +1,29 @@
 <html>
-	<head>
-		{{# block "titulo" }}
-		{{/block}}
-	</head>
-	<body>
-	
-	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>	
+  <head>
+    {{# block "titulo" }}
+    {{/block}}
+  </head>
+  <body>
 
-	<a href="/">Consultorea.me</a>
-	<a href="/consultoras">Consultoras</a>
-	<a href="/proyectos">Proyectos</a>
-	
-	{{# block "contenido" }}
-	{{/block}}
-	
-	</body>
+  <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand"href="/">Consultorea.me</a>
+      </div>
+      <div>
+        <ul class="nav navbar-nav">
+          <li><a href="/consultoras">Consultoras</a></li>
+          <li><a href="/proyectos">Proyectos</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  {{# block "contenido" }}
+  {{/block}}
+
+  </body>
 </html>
