Agregando form de busqueda

--- a/src/main/resources/templates/consultoras.hbs
+++ b/src/main/resources/templates/consultoras.hbs
@@ -6,8 +6,14 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-11">	
-			
+		<form action="/consultoras" >
+			<input type="text" name="filtroNombre">
+			<input type="submit">
+		</form>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">	
 		<table class="table table-striped" >
 			<hr>
 				<td>Nombre</td>
@@ -20,9 +26,6 @@
 			</tr>
 		{{/consultoras}}				
 		</table>
-		</div>
-		<div class="col-md-1">
-		adsadadasd
 		</div>
 	</div>
 </div>
