--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -2,8 +2,10 @@
 	<title>Consultorea.me</title>
 {{/partial}}
 		
-{{# partial "contenido" }}	
-	Bienvenido a Consultorea.me  
+{{# partial "contenido" }}	  
+<div class="jumbotron">
+  <h1>Bienvenido a Consultorea.me</h1>
+</div>	
 {{/partial}}
 				
 {{> layout.hbs }}
