Usango layout en el form de nueva consultora

--- a/src/main/resources/templates/consultora-nueva.hbs
+++ b/src/main/resources/templates/consultora-nueva.hbs
@@ -1,9 +1,10 @@
+{{# partial "contenido" }}  
+
 <h1>Nueva Consultora</h1>
 
 <form action="/consultoras" method="POST">
 
-
-	<label for="nombre">Nombre</label>
+  <label for="nombre">Nombre</label>
 	<input type="text" name="nombre">
 	
 	<label for="cantidadEmpleados">Cantidad de Empleados</label>
@@ -12,3 +13,7 @@
 	<input type="submit">
 </form>
 
+{{/partial}}
+
+
+{{> layout.hbs }}
