--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -1,13 +1,9 @@
-html {
-  position: relative;
-  min-height: 100%;
-}
 body {
-  margin-bottom: 60px;
+  margin: 5vh 30%;
+  font-family: Lato, sans-serif;
+  font-weight: 300;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
+
+h1 {
+
 }
