--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -1,9 +1,19 @@
 body {
-  margin: 5vh 30%;
+  margin: 5vh 30vw;
   font-family: Lato, sans-serif;
   font-weight: 300;
 }
 
 h1 {
+ font-weight: 300;
+}
 
+h2 {
+ font-weight: 300;
+}
+
+
+footer {
+  position: absolute;
+  bottom: 0;
 }
