--- a/src/main/resources/templates/consultoras.html.hbs
+++ b/src/main/resources/templates/consultoras.html.hbs
@@ -9,14 +9,15 @@
         <p>A continuación un listado de nuestras consultoras más importantes</p>
 
         <form action="/consultoras" method="GET">
-            Buscar por nombre
-            <input type="text" name="filtro" placeholder="Ingrese el nombre de la consultora a buscar">
+            Buscar por username
+            <input type="text" name="filtro" placeholder="Ingrese el username de la consultora a buscar">
+
             <input type="submit" value="Buscar">
         </form>
 
         <ul>
             {{#consultoras}}
-                <li><a href="consultoras/{{id}}">{{nombre}}</a></li>
+                <li><a href="consultoras/{{id}}">{{username}}</a></li>
             {{/consultoras}}
         </ul>
 
