--- a/src/main/resources/templates/detalle-consultora.html.hbs
+++ b/src/main/resources/templates/detalle-consultora.html.hbs
@@ -1,11 +1,11 @@
 {{# partial "titulo" }}
-    <title>Consultorea.me - Consultora {{nombre}}</title>
+    <title>Consultorea.me - Consultora {{username}}</title>
 {{/partial}}
 
 {{# partial "contenido" }}
  <section>
      <div>
-         <span>Nombre:</span><span>{{nombre}}</span>
+         <span>Nombre:</span><span>{{username}}</span>
      </div>
      <div>
          <span>Cantidad de empleados:</span><span>{{cantidadEmpleados}}</span>
