--- a/src/main/resources/templates/layout.html.hbs
+++ b/src/main/resources/templates/layout.html.hbs
@@ -3,13 +3,14 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/main.css">
     {{# block "titulo" }}
-    {{/block}}
+{{/block}}
 </head>
 
 <body>
     <nav>
         <a href="/">Home</a>
         <a href="/consultoras">Nuestras Consultoras</a>
+        <a href="/login">Iniciar Sesión</a>
     </nav>
 	<main>
 		<h1>Consultorea.me</h1>
