--- a/src/main/resources/templates/index.html.hbs
+++ b/src/main/resources/templates/index.html.hbs
@@ -45,7 +45,7 @@
 
         <ul>
             {{#consultoras}}
-                <li>{{nombre}}</li>
+                <li>{{username}}</li>
             {{/consultoras}}
         </ul>
 
