--- a/src/main/resources/templates/consultoras.html.hbs
+++ b/src/main/resources/templates/consultoras.html.hbs
@@ -10,7 +10,7 @@
 
         <form action="/consultoras" method="GET">
             Buscar por nombre:
-            <input type="text" name="filtro" placeholder="Ingrese el username de la consultora a buscar">
+            <input type="text" name="filtro" value="{{filtro}}" placeholder="Ingrese el username de la consultora a buscar">
 
             <input type="submit" value="Buscar">
         </form>
