--- a/src/main/resources/templates/index.html.hbs
+++ b/src/main/resources/templates/index.html.hbs
@@ -26,7 +26,7 @@
         </p>
 
         <p>
-            lsdkasldksakdl
+            UNA PRUEBA DE QUE CAMBIO {{ fecha }}
         </p>
 
         <ol>
@@ -44,9 +44,9 @@
         <p>un bonito texto sobre nuestros clientes.</p>
 
         <ul>
-            {{#consultoras}}
+            {{#each consultoras}}
                 <li>{{nombre}}</li>
-            {{/consultoras}}
+            {{/each}}
         </ul>
 
         <a href="/consultoras">Ver más...</a>
