Agregando ejemplo transaccional

--- a/src/main/resources/templates/index.html.hbs
+++ b/src/main/resources/templates/index.html.hbs
@@ -49,10 +49,11 @@
 
 			<ul>
 				{{#consultoras}}
-				<li>{{nombre}}</li>
+				<li><a href="/consultoras/{{id}}">{{nombre}}</a></li>
 				{{/consultoras}}
 			</ul>
 
+            <a href="/consultoras/nueva">Crea tu propia consultora</a>
 		</section>
 {{/partial}}
 
