contador con login

--- a/src/main/resources/templates/blog.html.hbs
+++ b/src/main/resources/templates/blog.html.hbs
@@ -6,7 +6,13 @@
 
     Este es otro articulo genial
 
-    {{> contratanos.html.hbs }}
+
+    <div>
+        Lo visitaste: {{ this }}
+    </div>
+    <div>
+        {{> contratanos.html.hbs }}
+    </div>
 {{/partial}}
 
 {{> layout.html.hbs}}
