Listo para clase

--- a/src/main/resources/templates/layout.html.hbs
+++ b/src/main/resources/templates/layout.html.hbs
@@ -1,25 +1,26 @@
 <html>
 
-<head>
-  <link rel="stylesheet" type="text/css" href="/main.css">
-  {{# block "titulo" }}
-  {{/block}}
-</head>
+    <head>
+      <link rel="stylesheet" type="text/css" href="/main.css">
+      {{# block "titulo" }}
+      {{/block}}
+    </head>
 
-<body>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/consultoras">Nuestras Consultoras</a>
-    <a href="/login">Iniciar Sesión</a>
-  </nav>
-  <main>
-    <h1>Consultorea.me</h1>
-    {{# block "contenido" }}
-    {{/block}}
-  </main>
-  <footer class="fondo-gris">
-    Copyright 2021 Consultorea.me
-  </footer>
-</body>
+    <body>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/consultoras">Nuestras Consultoras</a>
+        <a href="/login">Iniciar Sesión</a>
+        <a href="#">I{{saraza}}</a>
+      </nav>
+      <main>
+        <h1>Consultorea.me</h1>
+        {{# block "contenido" }}
+        {{/block}}
+      </main>
+      <footer class="fondo-gris">
+        Copyright 2021 Consultorea.me
+      </footer>
+    </body>
 
 </html>
